mp5/grade_report.txt
Grading r37435 by zeruiw2 committed on Thu Mar 30 23:51:36 CDT 2017
Monad Autograder
Testing mp5 at 2017-03-31 01:47:05

"The primary purpose of the DATA statement is to give names to constants; instead of referring to pi as 3.141592653589793 at every appearance, the variable PI can be given that value with a DATA statement and used instead of the longer form of the constant. This also simplifies modifying the program, should the value of pi change." ~ FORTRAN manual for Xerox computers

Setting up test environment...
Compiling...
================================================================
quadtree.cpp:296:3: error: use of undeclared identifier 'pruneCount'
  pruneCount()
  ^
quadtree.cpp:299:15: error: out-of-line definition of 'pruneCount' does not match any declaration in 'Quadtree'
int Quadtree::pruneCount(QuadtreeNode* subroot, int tolerance){
              ^~~~~~~~~~
2 errors generated.
make: *** [quadtree.o] Error 1
make: *** Waiting for unfinished jobs....


Running tests...
================================================================
Could not execute test cases


Total score...
================================================================
TOTAL SCORE: 0

